# bb84_simulazione

./: .gitignore  Cargo.toml  Protocollo BB84 - specifica senza concorrenza.docx  README.md
src/: adversary.rs  config.rs  main.rs  public_channel.rs  quantum_channel.rs  reader.rs  writer.rs
