[package]
name = "bb84_simulazione"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
actix-web = "4"
actix-web-actors = "4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
